// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MacrosSettingsForm/> should display a loader when fetching a macro 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/macros"
          >
            Macros
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Edit
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<MacrosSettingsForm/> should notify when failing to delete macro 1`] = `undefined`;

exports[`<MacrosSettingsForm/> should render a filled form when passed macro id 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/macros"
          >
            Macros
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Edit: Waive Fee
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<MacrosSettingsForm/> should render an empty form when no macro id 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/macros"
          >
            Macros
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add macro
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <form
      class=""
    >
      MacroEdit
      <div
        class="mt-5 form-group"
      >
        <button
          aria-disabled="false"
          class="wrapper mr-2 fill primary medium"
          type="submit"
        >
          <span>
            Create macro
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
